idea plugin for 77tool